--- a/client/src/css/cadastro-usuario.css
+++ b/client/src/css/cadastro-usuario.css
@@ -13,19 +13,25 @@
 }
 
 .cadastro-usuario-form {
-    width: 800px;
-    height: 550px;
+    width: 50%;
+    height: 70%;
     padding: 40px 40px;
     
-    position:absolute; /*it can be fixed too*/
+    position: relative; /*it can be fixed too*/
     left:0; right:0;
-    top:0; bottom:40px;
+    top:50px; bottom:0;
     margin: auto;
 
     /*this to solve "the content will not be cut when the window is smaller than the content": */
     max-width:100%;
-    max-height:100%;
+    max-height:550px;
     overflow:auto;
+}
+
+@media (max-width: 600px) {
+    .cadastro-usuario-form {
+        width: 100%;
+    }
 }
 
 .btn-black {
