Tela de edição dos dados de usuário e ajuste nas notificações do sistema.

--- a/client/src/assets/css/header.css
+++ b/client/src/assets/css/header.css
@@ -1,3 +1,10 @@
 .navbar {
     color: #fff;
 }
+
+
+
+.dropdown-item:active {
+    background-color: rgba(223, 223, 223, 0.685);
+    color: #212529;
+}
