Validação de dados e Tratador de Erros.

--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
     position: fixed;
     top: 0; 
     bottom: 0;
@@ -7,7 +7,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-}
+} */
 
 .fundo-tela {
     position: fixed;
