Ajustes no front e implementação do menu lateral.

--- a/client/src/assets/css/header.css
+++ b/client/src/assets/css/header.css
@@ -1,5 +1,14 @@
 .navbar {
     color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 56px;
+}
+
+.navbar-dark {
+    background-color: black !important;
 }
 
 .dropdown-item:active {
