--- a/client/src/assets/css/reports.css
+++ b/client/src/assets/css/reports.css
@@ -1,11 +1,11 @@
-.resumo-financeiro {
+.relatorio-impressao {
     font-size: 83%;
 }
 
-.resumo-financeiro-print {
+.relatorio-impressao-print {
     font-size: 100%;
     zoom: 0.62;
     margin-left: 50px !important; 
     margin-right: 50px !important;
-    margin-top: 200px !important;      
+    margin-top: 200px !important;
 }
