--- a/client/src/assets/css/cadastro-usuario.css
+++ b/client/src/assets/css/cadastro-usuario.css
@@ -1,31 +1,12 @@
-.cadastro-usuario-tela {
-    position: fixed;
-    top: 0; 
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    background: -webkit-linear-gradient(left, #22d686, #24d3d3, #22d686, #24d3d3);
-    background: linear-gradient(to right, #22d686, #24d3d3, #22d686, #24d3d3);
+.cadastro-usuario {
+    max-height: calc(100vh - 252px);
+    overflow-y: auto;
+    overflow-x: hidden;
+    margin-top: 30px;
 }
 
 .cadastro-usuario-form {
-    width: 50%;
-    height: 80%;
-    padding: 40px 40px 10px 40px;
-    
-    position: relative; /*it can be fixed too*/
-    left:0; right:0;
-    top:50px; bottom:0;
-    margin: auto;
-
-    /*this to solve "the content will not be cut when the window is smaller than the content": */
-    max-width:100%;
-    max-height:550px;
-    overflow:auto;
+    margin-top: 70px;
 }
 
 @media (max-width: 600px) {
